# sglang

.github/workflows/: pr-test-rvv.yml  release-docker-rvv.yml  rvv-launcher.yml
banana_pi/: README.md  build_and_deploy_sgl-kernel.config.sh.example  build_and_deploy_sgl-kernel.sh  environment_setting.sh  run_rvv_tests.sh  setup_banana_pi.sh
banana_pi/install/: README.md  build_and_deploy_sgl-kernel.sh  setup_banana_pi.sh
banana_pi/test_tinyllama_riscv/: config_riscv.yaml  requirements.txt  test_environment.py  test_tinyllama_riscv.py  triton_stub.py  vllm_stub.py
banana_pi/test_tinyllama_rvv/: README.md  bench_endtoend.sh  benchmark_rvv_backends.py  config_rvv.yaml  launch_server_rvv.py  manage_rvv_env.py  test_environment.py  test_tinyllama_rvv.py  triton_stub.py  vllm_stub.py
banana_pi/test_tinyllama_rvv/stubs/: torchvision_stub.py  triton_stub.py  vllm_stub.py
banana_pi/tests/: README.md  profile_paged_attention.py  run_tests.sh  test_end_to_end_int8.py  test_memory_bandwidth.py  test_model_accuracy_int8.py  test_parametrized_int8.py  test_utils.py  test_vlen_alignment.py
banana_pi/tests_rvv_kernels/: README.md  tests_benchs_rvv_kernels.sh
docker/: rvv.Dockerfile
docs_new/: docs.json
docs_new/docs/hardware-platforms/: overview.mdx  rvv.mdx
python/sglang/: bench_offline_throughput.py
python/sglang/srt/: server_args.py
python/sglang/srt/distributed/: parallel_state.py
python/sglang/srt/layers/: activation.py  layernorm.py  logits_processor.py  rvv_utils.py  vocab_parallel_embedding.py
python/sglang/srt/layers/attention/: attention_registry.py  riscv_backend.py  rvv_backend.py
python/sglang/srt/layers/quantization/: unquant.py  utils.py  w8a8_int8.py
python/sglang/srt/layers/quantization/compressed_tensors/: compressed_tensors.py
python/sglang/srt/layers/quantization/compressed_tensors/schemes/: compressed_tensors_rvv.py  compressed_tensors_wNa16.py
python/sglang/srt/layers/rotary_embedding/: base.py  rope_variant.py
python/sglang/srt/layers/utils/: multi_platform.py
python/sglang/srt/managers/: overlap_utils.py
python/sglang/srt/mem_cache/: memory_pool.py
python/sglang/srt/model_executor/: cpu_graph_runner.py  forward_batch_info.py  model_runner.py
python/sglang/srt/utils/: common.py
python/sglang/test/: bench_one_batch_server_internal.py  test_utils.py
scripts/ci/rvv/: README.md  rvv_ci_exec.sh  rvv_ci_install_dependency.sh  rvv_ci_start_container.sh  setup_bpi_f3_runner.sh  strip_cursor_trailer.sh  verify_rvv_support.py
sgl-kernel/: pyproject_riscv64.toml
sgl-kernel/benchmark/: bench_decode_attention_backend.py  bench_rvv_decode.py  bench_rvv_decode_attention.py  bench_rvv_decode_int8.py  bench_rvv_extend.py  bench_rvv_extend_attention.py  bench_rvv_extend_int8.py  bench_rvv_gemm.py  bench_rvv_gemm_int8.py  bench_rvv_prefill_attention.py
sgl-kernel/benchmark/rvv/: _rvv_bench_utils.py  bench_activation.py  bench_bf16_gemm.py  bench_decode.py  bench_extend.py  bench_gemm.py  bench_gsm8k_eval.py  bench_int8_decode.py  bench_int8_extend.py  bench_int8_gemm.py  bench_moe.py  bench_native_vs_rvv.py  bench_norm.py  bench_profile_rvv_components.py  bench_rope.py  bench_rvv_chunked_prefill_small.py  bench_rvv_kv_capacity.py  bench_rvv_kv_concurrent.py  bench_rvv_kv_eviction.py  bench_rvv_memory_profile.py  bench_rvv_prefix_cache.py  bench_rvv_profile_report.py  bench_rvv_quant_memory_profiling.py  bench_rvv_quant_throughput.py  bench_throughput.py  check_rvv_graph_health.py  run_sglang_rvv_benchmarks.sh  utils.py
sgl-kernel/cmake/: riscv-toolchain.cmake
sgl-kernel/csrc/cpu/: CMakeLists.txt  RVVCMakeLists.txt  decode.cpp  decode_riscv.cpp  decode_rvv.cpp  extend.cpp  extend_rvv.cpp  gemm.cpp  gemm_int8.cpp  gemm_rvv.cpp  gemm_rvv.h  interface.cpp  numa_utils.cpp  prefill.cpp  prefill_rvv.cpp  torch_extension_cpu.cpp
sgl-kernel/csrc/cpu/riscv64/: CMakeLists.riscv64.cmake  activation.cpp  decode.cpp  extend.cpp  gemm.cpp  gemm.h  gemm_int4.cpp  gemm_int8.cpp  moe.cpp  norm.cpp  rope.cpp  torch_extension_riscv64.cpp  vector_helpers.h  vector_math.h
sgl-kernel/csrc/cpu/rvv/: CMakeLists.txt  decode.cpp  decode_int8.cpp  extend.cpp  extend_int8.cpp  gemm.cpp  gemm.h  gemm_int8.cpp  vector_helpers.h  vector_math.h  vlen_utils.cpp  vlen_utils.h
sgl-kernel/python/sgl_kernel/: __init__.py  gemm.py
sgl-kernel/tests/: test_decode_attention_cpu.py  test_rvv_decode.py  test_rvv_decode_attention_cpu.py  test_rvv_decode_int8.py  test_rvv_extend.py  test_rvv_extend_attention_cpu.py  test_rvv_extend_int8.py  test_rvv_gemm.py  test_rvv_gemm_int8.py  test_rvv_prefill_attention_cpu.py
test/srt/: test_riscv_backend.py  test_rvv_backend.py
test/srt/cpu/rvv/: rvv_utils.py  test_gemm.py  test_rvv_activation.py  test_rvv_attention_backend.py  test_rvv_backend.py  test_rvv_backend_registration.py  test_rvv_compressed_tensors_int4.py  test_rvv_decode.py  test_rvv_decode_int8.py  test_rvv_extend.py  test_rvv_extend_int8.py  test_rvv_gemm.py  test_rvv_moe.py  test_rvv_norm.py  test_rvv_rope.py  utils.py
